prisma-core/tests/snapshots/protocol_snapshots__client_hello_wire.snap
---
source: prisma-core/tests/protocol_snapshots.rs
expression: encoded
---
- 2
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 0
- 0
- 0
- 0
- 101
- 83
- 241
- 0
