prisma-core/tests/snapshots/protocol_snapshots__client_init_v3_wire.snap
---
source: prisma-core/tests/protocol_snapshots.rs
expression: encoded
---
- 3
- 0
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 170
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 101
- 83
- 241
- 0
- 1
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
- 187
