prisma-core/tests/snapshots/protocol_snapshots__data_frame_domain_connect_wire.snap
---
source: prisma-core/tests/protocol_snapshots.rs
expression: encoded
---
- 1
- 0
- 0
- 0
- 0
- 0
- 0
- 3
- 11
- 101
- 120
- 97
- 109
- 112
- 108
- 101
- 46
- 99
- 111
- 109
- 0
- 80
