prisma-core/tests/snapshots/protocol_snapshots__prisma_server_init_wire.snap
---
source: prisma-core/tests/protocol_snapshots.rs
expression: encoded
---
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 204
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 221
- 0
- 0
- 0
- 1
- 9
- 0
- 0
- 0
- 0
- 3
- 1
- 2
- 3
- 0
- 3
- 128
- 0
- 0
- 1
- 0
- 2
