prisma-core/tests/snapshots/protocol_snapshots__server_accept_v2_wire.snap
---
source: prisma-core/tests/protocol_snapshots.rs
expression: encoded
---
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 1
- 0
